--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,18 +1,5 @@
 {% extends "main/base.html" %} {% load static %} {% block title %}Generador de
 Videos IA{% endblock %} {% block content %}
-<!-- MENSAJE ALERT HARDCODE -->
-<!-- <div id="alerts-modal">
-  <div class="alert alert-center alert-success show" role="alert">
-    Error: Error al acceder a la API de ChatGPT: Incorrect API key provided:
-    sk-proj-************************* *****************************************
-    ********************** ************************** **************************
-    ***********f1dc. You can find your API key a t
-    https://platform.openai.com/account/api-keys.
-  </div>
-</div> -->
-<!-- MENSAJE ALERT HARDCODE -->
-
-<!-- ??? -->
 <section id="dashboard-section">
   <!-- PANEL LATERAL IZQUIERDO -->
   <aside id="aside-buttons" role="tablist">
@@ -304,6 +291,8 @@ Videos IA{% endblock %} {% block content %}
           </button>
         </div>
         <!--  opciones sugeridas hardcodeadas-->
+        <!--  opciones sugeridas hardcodeadas-->
+        <!--  opciones sugeridas hardcodeadas-->
         <div id="titleSuggestions">
           <h3 id="title-suggestion-container">
             <i class="fa-solid fa-lightbulb"></i> Titulos sugeridos
@@ -325,6 +314,7 @@ Videos IA{% endblock %} {% block content %}
             <i class="fa-solid fa-check"></i>
           </div>
         </div>
+        <!--  opciones sugeridas hardcodeadas-->
         <!--  opciones sugeridas hardcodeadas-->
         <!--  opciones sugeridas hardcodeadas-->
         <!-- BOTON PARA GENERAR VIDEO -->
@@ -391,7 +381,6 @@ Videos IA{% endblock %} {% block content %}
 
       <div id="videos-store">
         <h3 id="btn-open-existing-videos">Videos almacenados</h3>
-        <!-- <button id="btn-open-existing-videos">Ver videos</button> -->
         <div id="existingVideos" class="close-existing"></div>
       </div>
     </div>
@@ -1009,9 +998,9 @@ Videos IA{% endblock %} {% block content %}
   <!-- SECCION DE GENERACION DE CONTENIDO, GALERIA Y CONFIGURACION DE PERFIL  -->
 
   <!-- IMAGEN DE CARGA DE PANTALLA  -->
-  <div id="loading">
+  <!-- <div id="loading">
     <span class="loader"> </span>
-  </div>
+  </div> -->
   <!-- IMAGEN DE CARGA DE PANTALLA -->
 
   <!-- CHATBOT -->
