--- a/static/main/css/descargar_eliminar.css
+++ b/static/main/css/descargar_eliminar.css
@@ -19,7 +19,7 @@
   cursor: pointer;
   transition-duration: 0.3s;
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
   background-color: var(--borderInputs);
 }
 
